--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -93,6 +93,7 @@ $lightGreen: #b9e7e7;
                     }
 
                     .write {
+                        text-decoration: none;
                         background-color: $lightGreen;
                         width: 50px;
                         height: 50px;
